# AetherVoice-Private-Sovereign-Rail

./: README.md  env.example
client/src/: app.js
client/src/components/: PrivacyDashboard.js
client/src/hooks/: useUmbraShield.js
legal-kb/: viewing-key-protocol.md
qvac-engine/: Cargo.toml  README.md
qvac-engine/src/: audit_logic.rs  ocr_module.rs
umbra-bridge/: compliance-gate.js  private-settlement.js
