[package]
name = "qvac-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tether's QVAC SDK for local-first AI
qvac-sdk = "0.1.0" 
# For image preprocessing before OCR
image = "0.25"
# Fast, local LLM inference
ort = "2.0" # ONNX Runtime for Rust
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
